--- a/_posts/0000-01-02-peterkh.md
+++ b/_posts/0000-01-02-peterkh.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Well, this is something else.
 Use the left arrow to go back!
 
